# topologically_distinct_guesses

./: .gitignore  README.md  check_all_guesses.py  create_boxplot.py  dataformat.py  drake_viz.py  ik.py  joints1.csv  notes.md  optimize_feasible.py  record.txt  show_problem.py  take_meshcat_screenshot.py  trajectory0_opt.txt  trajectory1_opt.txt  trajectory2_opt.txt  trajectory3_opt.txt  visualize.py
.github/: workflow.yml
.github/actions/optimize_path/: action.yml
.github/actions/setup/: action.yml
.github/actions/visualize_path/: action.yml
.github/workflows/: build_run_publish.yml  build_run_publish_combined.yml
config/: bar_table_scene.py  calc_elbow_position.md  calc_elbow_position.py  equations.py  initial_positions.yaml  planning_setting.py  planning_setting.yaml  rosie_scene.py  simple_scene.py
pages/: index.html
ros2_ws/: README.md  notes.md  stl2obj.py  trajectory0.txt  trajectory1.txt  trajectory2.txt  trajectory3.txt  trajectory4.txt  trajectory5.txt  trajectory6.txt
ros2_ws/src/fetch_description/: CMakeLists.txt  package.xml
ros2_ws/src/fetch_description/robots/: freight.urdf
ros2_ws/src/kortex_description/: CMakeLists.txt  package.xml
ros2_ws/src/ompl_constrained_planning/: CMakeLists.txt  package.xml
ros2_ws/src/ompl_constrained_planning/launch/: ompl_constrained_planning.launch.py  ompl_constrained_planning.rviz
ros2_ws/src/ompl_constrained_planning/src/: ompl_constrained_planning_tutorial.cpp
ros2_ws/src/simple_8dof_mobile_manipulator/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/simple_9dof_mobile_manipulator/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/simple_9dof_mobile_manipulator/config/: 9dof_mobile_manipulator.urdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mobile_manipulator.ros2_control.xacro  mobile_manipulator.srdf  mobile_manipulator.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
ros2_ws/src/simple_9dof_mobile_manipulator/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
topo_geo_paths/: .gitignore  Cargo.toml  README.md  graph.dot  rustfmt.toml  trajectory0.txt  trajectory1.txt  trajectory2.txt  trajectory3.txt  two_link_arm_graph.dot
topo_geo_paths/examples/: dijkstra.rs  grid_2d.rs  hexasphere.rs  mm_8dof.rs  swept_sphere.rs  two_link_arm.rs
topo_geo_paths/src/: array_utils.rs  colors.rs  find_distinct_paths.rs  graph_utils.rs  grid_graph.rs  hexasphere_graph.rs  kinematics.rs  lib.rs  link_obstacles.rs  main.rs  mm_8dof_graph.rs  nag_dijkstra.rs  not_nan_util.rs  obstacles.rs  planning_setting.rs  swept_sphere_graph.rs  topo_dijkstra.rs  two_link_arm_graph.rs  visualization.rs
(+19 files in other folders)
